# st-connections-hackathon

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  app_demo.py  chroma_connection.py  pyproject.toml  requirements.txt  setup.cfg
.streamlit/: secrets.toml
chroma/: chroma.sqlite3
data/: paul_graham_essay.txt
streamlit_chroma_connection/: __init__.py  app_demo.py  chroma_connection.py
