[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_chroma_connection"
version = "1.1"
description = "A streamlit connection for Chroma vectorstore"
readme = "README.md"
authors = [{ name = "Pedro Toledo", email = "pedroltoledo@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
keywords = ["streamlit", "connections", "vectorstore", "chroma"]
dependencies = [
    "streamlit >= 1.28.0, <2.0.0",
    "chromadb == 0.4.2",
    "pandas >= 2.0.0, <2.1.0",
    "pysqlite3-binary == 0.5.0",
    "langchain == 0.0.240",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["flake8", "pre-commit", "ipykernel"]

[tool.setuptools]
packages  = ["streamlit_chroma_connection"]
